# v2t

./: .gitignore  AGENTS.md  LICENSE  README.md  config.py  gui_overlay.py  hotkeys.py  injector.py  main.py  permissions.py  pyproject.toml  recorder.py  sounds.py  start.sh  transcriber.py
.github/workflows/: test.yml
backends/: __init__.py  base.py  detect.py  linux.py  macos.py  windows.py
sounds/: __init__.py  base.py  bloop.py  click.py  simple.py  warm.py
tests/: __init__.py  conftest.py  test_backends_detect.py  test_config.py  test_hotkeys.py  test_injector.py  test_main.py  test_permissions.py  test_recorder.py  test_sounds.py  test_sounds_base.py  test_sounds_providers.py  test_sounds_registry.py  test_transcriber.py
