[project]
name = "v2t"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pynput>=1.8.1",
    "pywhispercpp>=1.4.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
